# pressio-hyperreduction

./: CMakeLists.txt  DESCRIPTION.rst  README.md  pytest.ini  setup.py
cmake/tpls/: tplBlas.cmake  tplEigen.cmake  tplLapack.cmake  tplMPI.cmake  tplTrilinos.cmake
demos/: qr.py  svd.py
demos/galerkin_collocation_projector_onnode_via_driver_script/: galerkinProjector.txt  input.yaml
demos/galerkin_collocation_projector_parallel_via_driver_script/: galerkinProjector.txt.3.0  galerkinProjector.txt.3.1  galerkinProjector.txt.3.2  input.yaml  matrix.txt.3.0  matrix.txt.3.1  sampleMeshNodes.txt
demos/levscores/: input.yaml
demos/lspg_gnat_weighting_onnode_via_driver_script/: input.yaml  sampleMeshNodes.txt
demos/lspg_gnat_weighting_parallel_via_driver_script/: input.yaml  matrix.txt.3.2  sampleMeshNodes.txt
demos/samplemesh_levscores_onnode_via_driver_script/: input.yaml  matrix.txt.1.0  sampleMeshNodes.txt  sampleMeshPMF.txt
demos/samplemesh_levscores_parallel_via_driver_script/: input.yaml  matrix.txt.3.0  matrix.txt.3.1  sampleMeshNodes.txt
demos/svd_onnode_via_driver_script/: lsv.txt.txt0  singularValues.txt
demos/svd_parallel_call_from_python/: main.py  svd.py
demos/svd_parallel_via_driver_script/: input.yaml  lsv.txt.txt0  lsv.txt.txt1  lsv.txt.txt2  matrix.txt.3.0  matrix.txt.3.1  singularValues.txt
demos/tsqr_parallel_call_from_python/: main.py  qr.py
driver-scripts/: array_io.py  binary_io.py  computeSVD.py  hypredGalerkinProjector.py  hypredLspgWeighting.py  hypred_galerkin_projector.py  hypred_levscores.py  yaml_parser.py
inputs/: hypred-levscore-template.yaml
inputs-templates/: galerkin-projector-template.yaml  hypred-levscore-template.yaml  lspg-weighting-template.yaml  svd-template.yaml
perf-tests/: main_svd.py
pressio_tools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pressiotools/: __init__.py  check_for_mpi4py.py  computeSvd.py  levscores.py  linalg.py
pressiotools/io/: array_read.py  array_write.py  yaml_parser.py
pressiotools/romoperators/: galerkinProjector.py  lspgWeighting.py
pressiotools/samplemesh/: galerkinProjector.py  withLeverageScores.py
regression_tests/: README.md
src/: main_binder.cc  ops.hpp  pinv.hpp  svd.hpp  tsqr.hpp  types.hpp
src/data_structures/: multivector.hpp  vector.hpp
srcpy/: array_io.py  do_svd.py  levscores_functions.py  samplemesh_with_levscores.py
tests/: matrix.bin.gold  matrix.txt.gold.3.0  matrix.txt.gold.3.1  matrix.txt.gold.3.2  runtest.sh  runtest_mpi.sh  runtest_onnode_only.sh  runtests.py  test.yaml  test_ascii_io.py  test_binary_io.py  test_levscores.py  test_levscores_mpi.py  test_mv.py  test_mv_mpi.py  test_mv_n4.py  test_ops_deim.py  test_ops_levscores.py  test_pseudoinv_n3.py  test_pseudoinv_rank1.py  test_pseudoinv_rank3.py  test_qr_n3.py  test_qr_nonuniform_n3.py  test_qr_rank1.py  test_qr_rank3.py  test_qr_rank3_nonuniform.py  test_samplemesh_from_levscores.py  test_samplemesh_from_levscores_mpi.py  test_sm_galerkin_projector.py  test_sm_galerkin_projector_n3.py  test_sm_galerkin_projector_n6.py  test_sm_levscores.py  test_sm_levscores_n3.py  test_svd_n1.py  test_svd_n6.py  test_svd_rank1.py  test_svd_rank3.py  test_vec.py  test_vec_n4.py  test_version.py  (+1 more)
tests/distributed/: test_galerkin_projector_n3.py  test_galerkin_projector_n6.py  test_levscores_n3.py  test_lspg_weighting_n6.py  test_mv_n4.py  test_ops_product_n6.py  test_pseudoinv_n1.py  test_pseudoinv_n6.py  test_qr_n1.py  test_qr_reorder_n6.py  test_sm_levscores_n3.py  test_svd_n1.py  test_svd_n3.py  test_svd_n6.py  test_version.py
tests/distributed/test_yaml_rw/: test.yaml  test_yaml.py
tests/onnode/: test_galerkin_projector.py  test_lspg_weighting.py  test_pseudoinv.py  test_qr.py  test_svd.py
tests/test_io/: matrix.bin.3.0  matrix.bin.3.1  matrix.bin.3.2  matrix.txt.gold  test_ascii_io.py  test_ascii_io_mpi.py  test_ascii_io_n3.py  test_binary_io.py  test_binary_io_mpi.py  test_binary_io_n3.py  vector.bin.3.1  vector.bin.3.2  vector.bin.gold.3.0  vector.txt  vector.txt.3.1  vector.txt.gold.3.0
tests/test_yaml_rw/: test.yaml  test_r1.yaml  test_yaml.py
unit_tests/: README.md
(+2 files in other folders)
